--- a/src/Components/ToolbarComponent/ToolbarComponent.css
+++ b/src/Components/ToolbarComponent/ToolbarComponent.css
@@ -8,7 +8,7 @@
 .toolbar-style{
     min-height: 0 !important;
     height: 55px !important;
-    background-color:blueviolet;
+    background-color:lightskyblue;
 }
 
 .button-style{
