--- a/src/Components/SearchComponent/SearchComponent.css
+++ b/src/Components/SearchComponent/SearchComponent.css
@@ -31,7 +31,7 @@ li{
 }
 
 li:hover{
-    color: blueviolet;
+    color: lightskyblue;
     cursor: pointer;
 }
 
@@ -44,5 +44,5 @@ li:hover{
 .textbox:focus{
     outline: none;
     border: none;
-    border-bottom: 4px solid blueviolet;
+    border-bottom: 4px solid lightskyblue;
 }
